--- a/alumni_edge/src/App.css
+++ b/alumni_edge/src/App.css
@@ -1,3 +1,12 @@
 #navbar {
   text-align: center;
+  background-color: black;
+  color: white;
+  height: 50px;
+}
+
+#alumniEdge {
+  margin-top: 0px;
+  cursor: pointer;
+  padding-top: 5px;
 }
