--- a/alumni_edge/src/App.css
+++ b/alumni_edge/src/App.css
@@ -67,3 +67,10 @@
   text-align: center;
   padding-top: 10px;
 }
+
+.choiceList{
+  width: 200px;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
