--- a/alumni_edge/src/App.css
+++ b/alumni_edge/src/App.css
@@ -107,3 +107,34 @@
   font-size: 20px;
   cursor: pointer;
 }
+.footer {
+  background-color: black;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  color: white;
+  font-size: 25px;
+ }
+
+ .copyright{
+   color: gray;
+   font-size: 15px;
+   margin-top: 100px;
+   margin-left: 620px;
+
+ }
+
+ .sitemap{
+   color: white;
+   font-size: 15px;
+   float: left;
+   
+ }
+
+ .contact{
+  color: white;
+  font-size: 15px;
+  float: right;
+  
+ }
+
